output-jdk/jdk17u-dev_row0374_1f81e5b1_08b3f72a/test.log
=== Starting JDK 17 Tests in Docker for a0c72d0 ===
--- Inside Docker: Running tests for a0c72d0 ---
Target(s): test/langtools/tools/javac/patterns/T8312229.java
--- Starting Test Execution in /repo/build_shared ---
--- Running target: test/langtools/tools/javac/patterns/T8312229.java ---
Detected jtreg test file.
XML output  to /repo/JTwork
--------------------------------------------------
TEST: tools/javac/patterns/T8312229.java
TEST JDK: /repo/build_shared/images/jdk

ACTION: compile -- Failed. Compilation failed: Compilation failed
REASON: User specified action: run compile T8312229.java 
TIME:   0.553 seconds
messages:
command: compile /repo/test/langtools/tools/javac/patterns/T8312229.java
reason: User specified action: run compile T8312229.java 
started: Thu Apr 30 10:16:34 UTC 2026
Mode: othervm
finished: Thu Apr 30 10:16:35 UTC 2026
elapsed time (seconds): 0.553
configuration:
javac compilation environment
  source path: /repo/test/langtools/tools/javac/patterns
  class path:  /repo/test/langtools/tools/javac/patterns
               /repo/JTwork/classes/tools/javac/patterns/T8312229.d

rerun:
cd /repo/JTwork/scratch && \
HOME=/root \
JTREG_HOME=/opt/jtreg \
LANG=en_US.UTF-8 \
LC_ALL=en_US.UTF-8 \
PATH=/bin:/usr/bin:/usr/sbin \
    /repo/build_shared/images/jdk/bin/javac \
        -J-Dtest.vm.opts= \
        -J-Dtest.tool.vm.opts= \
        -J-Dtest.compiler.opts= \
        -J-Dtest.java.opts= \
        -J-Dtest.jdk=/repo/build_shared/images/jdk \
        -J-Dcompile.jdk=/repo/build_shared/images/jdk \
        -J-Dtest.timeout.factor=1.0 \
        -J-Dtest.root=/repo/test/langtools \
        -J-Dtest.name=tools/javac/patterns/T8312229.java \
        -J-Dtest.file=/repo/test/langtools/tools/javac/patterns/T8312229.java \
        -J-Dtest.src=/repo/test/langtools/tools/javac/patterns \
        -J-Dtest.src.path=/repo/test/langtools/tools/javac/patterns \
        -J-Dtest.classes=/repo/JTwork/classes/tools/javac/patterns/T8312229.d \
        -J-Dtest.class.path=/repo/JTwork/classes/tools/javac/patterns/T8312229.d \
        -d /repo/JTwork/classes/tools/javac/patterns/T8312229.d \
        -sourcepath /repo/test/langtools/tools/javac/patterns \
        -classpath /repo/test/langtools/tools/javac/patterns:/repo/JTwork/classes/tools/javac/patterns/T8312229.d /repo/test/langtools/tools/javac/patterns/T8312229.java
STDOUT:
STDERR:
/repo/test/langtools/tools/javac/patterns/T8312229.java:32: error: patterns in switch statements are a preview feature and are disabled by default.
            var l = switch (o) {
                           ^
  (use --enable-preview to enable patterns in switch statements)
1 error

TEST RESULT: Failed. Compilation failed: Compilation failed
--------------------------------------------------
Test results: failed: 1
Report written to /repo/JTreport/html/report.html
Results written to /repo/JTwork
Error: Some tests failed or other problems occurred.
Target test/langtools/tools/javac/patterns/T8312229.java FAILED
=== SOME TESTS FAILED ===
=== Tests failed for a0c72d0 ===